
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 3 (rev 1433 - September 16, 2006)
====================================

* Modified QuickEdit plugin to only execute if manager session is valid and to check if the Output class exists before calling include_once on it again.  Should save .02 to .1s per request when manager is not logged in. (1433)
* [FS#387] Fix for Firefox browser with caching features disabled. (1432)
* Updated the SLLists include for Doc Manager with full php tags. (1431)
* [FS#276] Error prevented empty tags being rendered when using HTML Generic Tag widget when no value is specified (same problem with Image widget was fixed by Adam in commit #869). (1431)
* [FS#259] Amended language string that was referencing snippets, and not chunks. (1431)
* [FS#198] This fix uses a session value to allow the full manager to refresh when a theme is changed and prevents the manager being locked in an endless loop. (1431)
* Added ability to delete categories (1430)
* Modified export_site.static.php to handle proper response codes (1429)
* Modified getSettings() to only include or load system/user settings once per request (1429)
* Remove hard coded default Manager style (1418)
* Add 'keywords' option to meta tag manager (1418)
* Updated Wayfinder to latest version for 0.9.5 beta2 build. (1396-1398)
* Fixed a few more broken image paths in manager files.
* Corrected broken image paths when rendering date TV field.
* index.php - fix for 'undefined index' for $_SESSION['mgrValidated'] on some setups when visitor is not logged in.
* [FS#181] Removed stripslashes() call prior to merging TVs into document, tested out on a range of content combos and TVs and haven't found any adverse effects.