@@ -3,9 +3,11 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 3 (rev 1433 - September 16, 2006)
+MOD 0.9.5 beta 3 (rev 1440 - September 17, 2006)
 ====================================
 
+* Added fourth parameter to sendRedirect() function; this responseCode parameter can be used to pass in a valid HTTP redirect code to be set with a header() call (i.e. 'HTTP/1.1 301 Permanently moved'). (1440)
+* Fixed paths in loadExtension so it does not produce the path with //manager (1440)
 * Modified QuickEdit plugin to only execute if manager session is valid and to check if the Output class exists before calling include_once on it again.  Should save .02 to .1s per request when manager is not logged in. (1433)
 * [FS#387] Fix for Firefox browser with caching features disabled. (1432)
 * Updated the SLLists include for Doc Manager with full php tags. (1431)
